tests/ui/pattern/issue-72565.stderr
error: `dyn PartialEq<u32>` cannot be used in patterns
  --> $DIR/issue-72565.rs:6:9
   |
LL |         F => panic!(),
   |         ^

error: aborting due to previous error

